Integrate Moonshot AI's Kimi-k2 model: update configurations, add API key management, enhance setup scripts, and improve documentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,7 @@ services:
       - ANTHROPIC_API_KEY_FILE=/run/secrets/anthropic_api_key
       - OPENAI_API_KEY_FILE=/run/secrets/openai_api_key
       - GOOGLE_API_KEY_FILE=/run/secrets/google_api_key
+      - MOONSHOT_API_KEY_FILE=/run/secrets/moonshot_api_key
       
       # Telegram Bot Configuration
       - TELEGRAM_BOT_TOKEN_FILE=/run/secrets/telegram_bot_token
@@ -76,6 +77,7 @@ services:
       - anthropic_api_key
       - openai_api_key
       - google_api_key
+      - moonshot_api_key
       - telegram_bot_token
     
     # Port mapping
@@ -158,6 +160,7 @@ services:
       - anthropic_api_key
       - openai_api_key
       - google_api_key
+      - moonshot_api_key
       - telegram_bot_token
     
     networks:
@@ -186,6 +189,9 @@ secrets:
   
   google_api_key:
     file: ./secrets/google_api_key.txt
+  
+  moonshot_api_key:
+    file: ./secrets/moonshot_api_key.txt
   
   telegram_bot_token:
     file: ./secrets/telegram_bot_token.txt
